# defiance

./: CMakeLists.txt  README.md
include/shared/: linmath.h  mesh.h  object.h  program.h  shader.h  util.h  window.h
src/client/: CMakeLists.txt  main.c
src/shared/: mesh.c  object.c  program.c  shader.c  util.c  window.c
